k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejssampleapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejssampleapp
  template:
    metadata:
      labels:
        app: nodejssampleapp
    spec:
      containers:
        - name: nodejssampleapp
          image: containerazuredemo.azurecr.io/nodejssampleapp:latest
          ports:
            - containerPort: 3000
         volumeMounts:
            - mountPath: /usr/src/app/src/components/Header.tsx
              name: header-volume
              subPath: Header.tsx
      volumes:
        - name: header-volume
          configMap:
            name: header-configmap
            items:
              - key: Header.tsx
                path: Header.tsx
