k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejssampleapp
spec:
  selector:
    app: nodejssampleapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
