k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  rules:
    - host: reactapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejssampleapp
                port:
                  number: 80
